...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="Cancelar" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnActualizar"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="Actualizar" />

...
